<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        style="@style/fillx"
        android:orientation="horizontal"
        android:background="@drawable/urlbar_bg" >

        <TextView
            android:id="@+id/fav_text"
            style="@style/title_text_mid"
            android:layout_gravity="center_vertical"
            android:text="@string/fav_title_text"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0.0dp" />
        
        <TextView
            android:id="@+id/his_text"
            style="@style/title_text_mid"
            android:layout_gravity="center_vertical"
            android:text="@string/his_title_text"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0.0dp" />
        
    </LinearLayout>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_height="0.0dp"
        android:layout_weight="1"
        android:layout_width="match_parent" />
    
    <LinearLayout
        style="@style/fillx"
        android:orientation="horizontal"
        android:background="@color/black" >

        <TextView
            android:id="@+id/fav_his_manage"
            style="@style/menu_text"
            android:padding="7.0dp"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:text="@string/fav_his_manage" />
        
        <TextView
            android:id="@+id/fav_his_back"
            style="@style/menu_text"
            android:padding="7.0dp"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:text="@string/back_text" />
        
    </LinearLayout>
    
</LinearLayout>
